# Mapeamento_Interface

./: .gitignore  1-engine.bat  README.md  app.py  auto_save.py  design.py  design.ui  interface.py  kmz_analiser.py  pyproject.toml  requirements.txt
tmp/: doc.kml
