[tool.poetry]
name = "mapeamento-interface"
version = "0.1.0"
description = ""
authors = ["Joao Carlos - PC Online <joao.carlos.dev.log@gmail.com>"]
readme = "README.md"
packages = [{include = "mapeamento_interface"}]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
